# DesignPatterns

./: .gitignore  LICENSE  README.rst
docs/: notes.rst  test_sc_im.xlsx
workspace/projects/: CMakeLists.txt  tags
workspace/projects/.cache/clangd/index/: bus.h.05199F71E0C1F184.idx  bus.h.A4741C30C2BB2093.idx  bus.h.D6A425D736D48567.idx  cabinet.h.0408095DC278D745.idx  cabinet.h.D5C4C734B4697F91.idx  cabinet.h.D6958634A0DF06E8.idx  card.h.8E3E4603510A7B38.idx  card.h.D5698E238A3206C9.idx  card.h.E6AB0667C94C39B1.idx  chassis.h.046584917C0B5E2E.idx  chassis.h.26E0794C921009B8.idx  chassis.h.7BFE78BA5B31B411.idx  component.h.30DC33E37303C73A.idx  component.h.BD7C8980DDEF88BF.idx  composite_equipment.cpp.5621B3E04F8B6BA3.idx  composite_equipment.cpp.C721C47554D9918D.idx  composite_equipment.cpp.D6874CA3BDED8DB2.idx  composite_equipment.h.198B9B2C0F3678EE.idx  composite_equipment.h.318D098F0306F36A.idx  composite_equipment.h.811D382B0C0EF56B.idx  composition.cpp.4C789B633E0D7FF6.idx  composition.cpp.CFD36265CE7BAEBF.idx  composition.h.8D455000D65943A1.idx  composition.h.E7C3D277E0B72E8B.idx  compositor.cpp.8EFFDC1BD31A5F99.idx  compositor.cpp.E645B5DAC1F37927.idx  compositor.h.1D90925669706A35.idx  compositor.h.BEA4857FF4B094A1.idx  compositor_array.cpp.71686BD10C16E8BA.idx  compositor_array.cpp.CDC1564C53533B91.idx  compositor_array.h.0CECEB65B153F29A.idx  compositor_array.h.210CA606688ABAC6.idx  compositor_simple.cpp.04F205B25D7A0C5E.idx  compositor_simple.cpp.66734CAD64C5FC59.idx  compositor_simple.h.5784A48DBAC292ED.idx  compositor_simple.h.A788F9137BC08219.idx  compositor_tex.cpp.5C3EF225BB48EB38.idx  compositor_tex.cpp.7A9972F396212258.idx  compositor_tex.h.35032A2E78F1AD1F.idx  compositor_tex.h.B4E37DF32A378673.idx  (+114 more)
workspace/projects/common/: CMakeLists.txt  README.rst  tags
workspace/projects/common/include/: coord.h  currency.h  iterator.h  line.hpp  list.cpp  list.h  list_iterator.h  money.h  point.h  rect.h  tags  watt.h
workspace/projects/common/src/: CMakeLists.txt  currency.cpp  line.cpp  list_iterator.cpp  money.cpp  point.cpp  rect.cpp  tags  watt.cpp
workspace/projects/common/test/: CMakeLists.txt  test_all.cpp
workspace/projects/common/test/src/: CMakeLists.txt  test_currency.cpp  test_iterator.cpp  test_line.cpp  test_point.cpp  test_watt.cpp
workspace/projects/lexi/: CMakeLists.txt  README.rst  main.cpp  tags
workspace/projects/lexi/docs/: lexi_classes.puml  lexi_classes_format.puml  lexi_classes_imbellishment.puml  lexi_classes_structure.puml  lexi_page.puml  lexi_usecases.puml  partial_glyph  salt.puml
workspace/projects/lexi/include/: glyph.h  glyph_character.h  glyph_column.h  glyph_composite.h  glyph_decorator.h  glyph_decorator_border.h  glyph_leaf.h  glyph_polygon.h  glyph_rectangle.h  glyph_row.h  glyph_strategy_composition.h  glyph_strategy_compositor.h  glyph_strategy_compositor_array.h  glyph_strategy_compositor_simple.h  tags  window.h
workspace/projects/lexi/src/: CMakeLists.txt  glyph.cpp  glyph_character.cpp  glyph_column.cpp  glyph_composite.cpp  glyph_decorator.cpp  glyph_leaf.cpp  glyph_rectangle.cpp  glyph_row.cpp  tags
workspace/projects/lexi/test/: CMakeLists.txt  tags  test_all.cpp  test_glyph_character.cpp  test_glyph_column.cpp  test_glyph_row.cpp
workspace/projects/lexiapp/: CMakeLists.txt  tags
workspace/projects/patterns/: CMakeLists.txt  README.rst
workspace/projects/patterns/.copyme/: CMakeLists.txt  main.cpp
workspace/projects/patterns/.copyme/src/: CMakeLists.txt
workspace/projects/patterns/abstract_factory/: CMakeLists.txt  README.rst  main.cpp
workspace/projects/patterns/abstract_factory/docs/: abstract_factory_example.puml  abstract_factory_structure.puml
workspace/projects/patterns/abstract_factory/include/: map_direction.h  map_door.h  map_maze.h  map_maze_factory_abstract.h  map_maze_factory_magic.h  map_maze_game.h  map_maze_player.hpp  map_room.h  map_room_bomb.h  map_site.h  map_wall.h  map_wall_blown.h  maze_factory.h
workspace/projects/patterns/abstract_factory/src/: CMakeLists.txt  map_door.cpp  map_maze.cpp  map_maze_factory_magic.cpp  map_maze_game.cpp  map_maze_player.cpp  map_room.cpp  map_room_bomb.cpp  map_site.cpp  map_wall.cpp  map_wall_blown.cpp  maze_factory.cpp
workspace/projects/patterns/abstract_factory/test/: test_all.cpp
workspace/projects/patterns/abstract_factory_app/: CMakeLists.txt  main.cpp
workspace/projects/patterns/adapter/: CMakeLists.txt  README.rst  main.cpp
workspace/projects/patterns/adapter/docs/: example.puml  sample_code.puml  sample_code_class.puml  sample_code_object.puml  structure_class.puml  structure_object.puml
workspace/projects/patterns/adapter/include/: manipulator.hpp  manipulator_text.hpp  shape.hpp  shape_text.hpp  shape_text_object.hpp  text_view.hpp
workspace/projects/patterns/bridge/: CMakeLists.txt  README.rst  main.cpp
workspace/projects/patterns/builder/: CMakeLists.txt  README.rst  main.cpp
workspace/projects/patterns/command/: CMakeLists.txt  README.rst  main.cpp
workspace/projects/patterns/composite/: CMakeLists.txt  README.rst  main.cpp  tags
workspace/projects/patterns/compositeapp/: CMakeLists.txt  tags
workspace/projects/patterns/decorator/: CMakeLists.txt  main.cpp  tags
workspace/projects/patterns/decoratorapp/: CMakeLists.txt  tags
workspace/projects/patterns/factory_method/: README.rst
workspace/projects/patterns/iterator/: CMakeLists.txt  README.rst  main.cpp
workspace/projects/patterns/memento/: CMakeLists.txt  README.rst  main.cpp
workspace/projects/patterns/prototype/: CMakeLists.txt  README.rst  main.cpp
workspace/projects/patterns/singlton/: CMakeLists.txt  README.rst
workspace/projects/patterns/strategy/: CMakeLists.txt  tags
workspace/projects/patterns/strategyapp/: CMakeLists.txt  main.cpp  tags
workspace/projects/patterns/visitor/: CMakeLists.txt  README.rst  main.cpp
workspace/projects/test/: CMakeLists.txt  tags
workspace/projects/test/include/: tags
workspace/projects/test/src/: CMakeLists.txt  tags  test_currency.cpp  test_list.cpp  test_point.cpp  test_rect.cpp
(+233 files in other folders)
